--- a/index.html
+++ b/index.html
@@ -93,5 +93,138 @@
       </div>
     </div>
     <!-- End Landing -->
+    
+    <!-- Start Articles -->
+    <div class="articles">
+        <h2 class="main-title">Articles</h2>
+        <div class="container">
+        <div class="box">
+            <img src="images/cat-01.jpg" alt="img">
+            <div class="content">
+                <h3>Test Title</h3>
+                <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Error doloremque!</p>
+            </div>
+            <div class="info">
+                <a href="#">Read More</a>
+                <i class="fas fa-long-arrow-alt-right"></i>
+            </div>
+        </div>
+        <div class="box">
+            <img src="images/cat-02.jpg" alt="img">
+            <div class="content">
+                <h3>Test Title</h3>
+                <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Error doloremque!</p>
+            </div>
+            <div class="info">
+                <a href="#">Read More</a>
+                <i class="fas fa-long-arrow-alt-right"></i>
+            </div>
+        </div>
+        <div class="box">
+            <img src="images/cat-03.jpg" alt="img">
+            <div class="content">
+                <h3>Test Title</h3>
+                <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Error doloremque!</p>
+            </div>
+            <div class="info">
+                <a href="#">Read More</a>
+                <i class="fas fa-long-arrow-alt-right"></i>
+            </div>
+        </div>
+        <div class="box">
+            <img src="images/cat-04.jpg" alt="img">
+            <div class="content">
+                <h3>Test Title</h3>
+                <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Error doloremque!</p>
+            </div>
+            <div class="info">
+                <a href="#">Read More</a>
+                <i class="fas fa-long-arrow-alt-right"></i>
+            </div>
+        </div>
+        <div class="box">
+            <img src="images/cat-05.jpg" alt="img">
+            <div class="content">
+                <h3>Test Title</h3>
+                <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Error doloremque!</p>
+            </div>
+            <div class="info">
+                <a href="#">Read More</a>
+                <i class="fas fa-long-arrow-alt-right"></i>
+            </div>
+        </div>
+        <div class="box">
+            <img src="images/cat-06.jpg" alt="img">
+            <div class="content">
+                <h3>Test Title</h3>
+                <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Error doloremque!</p>
+            </div>
+            <div class="info">
+                <a href="#">Read More</a>
+                <i class="fas fa-long-arrow-alt-right"></i>
+            </div>
+        </div>
+        <div class="box">
+            <img src="images/cat-07.jpg" alt="img">
+            <div class="content">
+                <h3>Test Title</h3>
+                <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Error doloremque!</p>
+            </div>
+            <div class="info">
+                <a href="#">Read More</a>
+                <i class="fas fa-long-arrow-alt-right"></i>
+            </div>
+        </div>
+        <div class="box">
+            <img src="images/cat-08.jpg" alt="img">
+            <div class="content">
+                <h3>Test Title</h3>
+                <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Error doloremque!</p>
+            </div>
+            <div class="info">
+                <a href="#">Read More</a>
+                <i class="fas fa-long-arrow-alt-right"></i>
+            </div>
+        </div>
+        </div>
+    </div>
+    <!-- End Articles -->
+    <!-- Start Gallery -->
+    <div class="gallery">
+        <h2 class="main-title">Gallery</h2>
+        <div class="container">
+            <div class="box">
+                <div class="image">
+                    <img src="images/gallery-01.png" alt="img">
+                </div>
+            </div>
+            <div class="box">
+                <div class="image">
+                    <img src="images/gallery-02.png" alt="img">
+                </div>
+            </div>
+            <div class="box">
+                <div class="image">
+                    <img src="images/gallery-03.jpg" alt="img">
+                </div>
+            </div>
+            <div class="box">
+                <div class="image">
+                    <img src="images/gallery-04.png" alt="img">
+                </div>
+            </div>
+            <div class="box">
+                <div class="image">
+                    <img src="images/gallery-05.jpg" alt="img">
+                </div>
+            </div>
+            <div class="box">
+                <div class="image">
+                    <img src="images/gallery-06.png" alt="img">
+                </div>
+            </div>
+        </div>
+    </div>
+    <!-- End Gallery -->
   </body>
 </html>
