Finish features section

--- a/index.html
+++ b/index.html
@@ -95,7 +95,7 @@
     <!-- End Landing -->
     
     <!-- Start Articles -->
-    <div class="articles">
+    <div class="articles" id="articles">
         <h2 class="main-title">Articles</h2>
         <div class="container">
         <div class="box">
@@ -190,7 +190,7 @@
     </div>
     <!-- End Articles -->
     <!-- Start Gallery -->
-    <div class="gallery">
+    <div class="gallery" id="gallery">
         <h2 class="main-title">Gallery</h2>
         <div class="container">
             <div class="box">
@@ -226,5 +226,42 @@
         </div>
     </div>
     <!-- End Gallery -->
+    <!-- Start Features -->
+    <div class="features" id="features">
+        <h2 class="main-title">Features</h2>
+        <div class="container">
+            <div class="box quality">
+                <div class="img-holder">
+                    <img src="images/features-01.jpg" alt="">
+                </div>
+                <h2>Quality</h2>
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Odit harum hic veniam eligendi minima</p>
+                <a href="#">More</a>
+            </div>
+            <div class="box time">
+                <div class="img-holder">
+                    <img src="images/features-01.jpg" alt="">
+                </div>
+                <h2>Time</h2>
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Odit harum hic veniam eligendi minima</p>
+                <a href="#">More</a>
+            </div>
+            <div class="box passion">
+                <div class="img-holder">
+                    <img src="images/features-01.jpg" alt="">
+                </div>
+                <h2>Passion</h2>
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Odit harum hic veniam eligendi minima</p>
+                <a href="#">More</a>
+            </div>
+        </div>
+    </div>
+    <!-- End Features -->
+    <!-- Start Testimonials -->
+    <div class="testimonials">
+        <h2 class="main-title">testimonials</h2>
+        <div class="container"></div>
+    </div>
+    <!-- End Testimonials -->
   </body>
 </html>
