--- a/index.html
+++ b/index.html
@@ -260,7 +260,98 @@
     <!-- Start Testimonials -->
     <div class="testimonials">
         <h2 class="main-title">testimonials</h2>
-        <div class="container"></div>
+        <div class="container">
+            <div class="box">
+                <img src="images/avatar-01.png" alt="img">
+                <h3>Mohamed sayed</h3>
+                <span class="title">Full Stack Web Developer</span>
+                <div class="rate">
+                    <i class="filled fas fa-star "></i>
+                    <i class="filled fas fa-star "></i>
+                    <i class="filled fas fa-star "></i>
+                    <i class="filled fas fa-star "></i>
+                    <i class="far fa-star "></i>
+                </div>
+                <p>
+                    Lorem ipsum dolor sit amet consectetur adipisicing elit. Maiores et reiciendis voluptatum, amet est natus quaerat ducimus
+                </p>
+            </div>
+            <div class="box">
+                <img src="images/avatar-02.png" alt="img">
+                <h3>Sherif Ahmed</h3>
+                <span class="title">FrontEnd Web Developer</span>
+                <div class="rate">
+                    <i class="filled fas fa-star "></i>
+                    <i class="filled fas fa-star "></i>
+                    <i class="filled fas fa-star "></i>
+                    <i class="filled fas fa-star "></i>
+                    <i class="far fa-star "></i>
+                </div>
+                <p>
+                    Lorem ipsum dolor sit amet consectetur adipisicing elit. Maiores et reiciendis voluptatum, amet est natus quaerat ducimus
+                </p>
+            </div>
+            <div class="box">
+                <img src="images/avatar-03.png" alt="img">
+                <h3>Ibrahim Adel</h3>
+                <span class="title">BackEnd Web Developer</span>
+                <div class="rate">
+                    <i class="filled fas fa-star "></i>
+                    <i class="filled fas fa-star "></i>
+                    <i class="filled fas fa-star "></i>
+                    <i class="filled fas fa-star "></i>
+                    <i class="far fa-star "></i>
+                </div>
+                <p>
+                    Lorem ipsum dolor sit amet consectetur adipisicing elit. Maiores et reiciendis voluptatum, amet est natus quaerat ducimus
+                </p>
+            </div>
+            <div class="box">
+                <img src="images/avatar-04.png" alt="img">
+                <h3>Enas Mahmoud</h3>
+                <span class="title">Softwere Engineer</span>
+                <div class="rate">
+                    <i class="filled fas fa-star "></i>
+                    <i class="filled fas fa-star "></i>
+                    <i class="filled fas fa-star "></i>
+                    <i class="filled fas fa-star "></i>
+                    <i class="far fa-star "></i>
+                </div>
+                <p>
+                    Lorem ipsum dolor sit amet consectetur adipisicing elit. Maiores et reiciendis voluptatum, amet est natus quaerat ducimus
+                </p>
+            </div>
+            <div class="box">
+                <img src="images/avatar-05.png" alt="img">
+                <h3>Sabry Samra</h3>
+                <span class="title">Node.js Developer</span>
+                <div class="rate">
+                    <i class="filled fas fa-star "></i>
+                    <i class="filled fas fa-star "></i>
+                    <i class="filled fas fa-star "></i>
+                    <i class="filled fas fa-star "></i>
+                    <i class="far fa-star "></i>
+                </div>
+                <p>
+                    Lorem ipsum dolor sit amet consectetur adipisicing elit. Maiores et reiciendis voluptatum, amet est natus quaerat ducimus
+                </p>
+            </div>
+            <div class="box">
+                <img src="images/avatar-06.png" alt="img">
+                <h3>Mostafa Gouda</h3>
+                <span class="title">Full Stack Web Developer</span>
+                <div class="rate">
+                    <i class="filled fas fa-star "></i>
+                    <i class="filled fas fa-star "></i>
+                    <i class="filled fas fa-star "></i>
+                    <i class="filled fas fa-star "></i>
+                    <i class="far fa-star "></i>
+                </div>
+                <p>
+                    Lorem ipsum dolor sit amet consectetur adipisicing elit. Maiores et reiciendis voluptatum, amet est natus quaerat ducimus
+                </p>
+            </div>
+        </div>
     </div>
     <!-- End Testimonials -->
   </body>
