Finish Services section

--- a/index.html
+++ b/index.html
@@ -383,7 +383,7 @@
             </div>
             <div class="box">
                 <div class="data">
-                    <img src="images/team-01.jpg" alt="img">
+                    <img src="images/team-02.jpg" alt="img">
                     <div class="social">
                         <a href="#">
                             <i class="fab fa-facebook-f"></i>
@@ -407,7 +407,7 @@
             </div>
             <div class="box">
                 <div class="data">
-                    <img src="images/team-01.jpg" alt="img">
+                    <img src="images/team-03.jpg" alt="img">
                     <div class="social">
                         <a href="#">
                             <i class="fab fa-facebook-f"></i>
@@ -431,7 +431,7 @@
             </div>
             <div class="box">
                 <div class="data">
-                    <img src="images/team-01.jpg" alt="img">
+                    <img src="images/team-04.jpg" alt="img">
                     <div class="social">
                         <a href="#">
                             <i class="fab fa-facebook-f"></i>
@@ -455,7 +455,7 @@
             </div>
             <div class="box">
                 <div class="data">
-                    <img src="images/team-01.jpg" alt="img">
+                    <img src="images/team-05.png" alt="img">
                     <div class="social">
                         <a href="#">
                             <i class="fab fa-facebook-f"></i>
@@ -479,7 +479,7 @@
             </div>
             <div class="box">
                 <div class="data">
-                    <img src="images/team-01.jpg" alt="img">
+                    <img src="images/team-06.png" alt="img">
                     <div class="social">
                         <a href="#">
                             <i class="fab fa-facebook-f"></i>
@@ -503,7 +503,7 @@
             </div>
             <div class="box">
                 <div class="data">
-                    <img src="images/team-01.jpg" alt="img">
+                    <img src="images/team-07.jpg" alt="img">
                     <div class="social">
                         <a href="#">
                             <i class="fab fa-facebook-f"></i>
@@ -527,7 +527,7 @@
             </div>
             <div class="box">
                 <div class="data">
-                    <img src="images/team-01.jpg" alt="img">
+                    <img src="images/team-08.jpg" alt="img">
                     <div class="social">
                         <a href="#">
                             <i class="fab fa-facebook-f"></i>
@@ -549,32 +549,57 @@
                     <p>Simple Short Description</p>
                 </div>
             </div>
-            <div class="box">
-                <div class="data">
-                    <img src="images/team-01.jpg" alt="img">
-                    <div class="social">
-                        <a href="#">
-                            <i class="fab fa-facebook-f"></i>
-                          </a>
-                          <a href="#">
-                            <i class="fab fa-twitter"></i>
-                          </a>
-                          <a href="#">
-                            <i class="fab fa-linkedin-in"></i>
-                          </a>
-                          <a href="#">
-                            <i class="fab fa-youtube"></i>
-                          </a>
-                    </div>
-                </div>
-                <div class="info">
-                    <h3>Name</h3>
-                    <p>Simple Short Description</p>
-                </div>
-            </div>
-
         </div>
     </div>
     <!-- End Team -->
+    <!-- Start Services -->
+    <div class="services">
+        <h2 class="main-title">Services</h2>
+        <div class="container">
+            <div class="box">
+                <i class="fas fa-user-shield fa-4x"></i>
+                <h3>Security</h3>
+                <div class="info">
+                    <a href="#">Details</a>
+                </div>
+            </div>
+            <div class="box">
+                <i class="fas fa-user-shield fa-4x"></i>
+                <h3>Security</h3>
+                <div class="info">
+                    <a href="#">Details</a>
+                </div>
+            </div>
+            <div class="box">
+                <i class="fas fa-user-shield fa-4x"></i>
+                <h3>Security</h3>
+                <div class="info">
+                    <a href="#">Details</a>
+                </div>
+            </div>
+            <div class="box">
+                <i class="fas fa-user-shield fa-4x"></i>
+                <h3>Security</h3>
+                <div class="info">
+                    <a href="#">Details</a>
+                </div>
+            </div>
+            <div class="box">
+                <i class="fas fa-user-shield fa-4x"></i>
+                <h3>Security</h3>
+                <div class="info">
+                    <a href="#">Details</a>
+                </div>
+            </div>
+            <div class="box">
+                <i class="fas fa-user-shield fa-4x"></i>
+                <h3>Security</h3>
+                <div class="info">
+                    <a href="#">Details</a>
+                </div>
+            </div>
+        </div>
+    </div>
+    <!-- End Services -->
   </body>
 </html>
