--- a/index.html
+++ b/index.html
@@ -553,7 +553,7 @@
     </div>
     <!-- End Team -->
     <!-- Start Services -->
-    <div class="services">
+    <div class="services" id="services">
         <h2 class="main-title">Services</h2>
         <div class="container">
             <div class="box">
@@ -601,5 +601,73 @@
         </div>
     </div>
     <!-- End Services -->
+    <!-- Start Skills -->
+    <div class="our-skills" id="our-skills">
+        <h2 class="main-title">Our Skills</h2>
+        <div class="container">
+                <img src="images/skills.png" alt="img">
+            <div class="skills">
+                <div class="skill">
+                    <h3>HTML  <span>80%</span></h3>
+                    <div class="progress">
+                        <span class="prog" style="width:80%" data-width="80%"></span>
+                    </div>
+                </div>
+                <div class="skill">
+                    <h3>CSS  <span>85%</span></h3>
+                    <div class="progress">
+                        <span class="prog" style="width:85%" data-width="80%"></span>
+                    </div>
+                </div>
+                <div class="skill">
+                    <h3>JavaScript  <span>75%</span></h3>
+                    <div class="progress">
+                        <span class="prog" style="width:75%" data-width="80%"></span>
+                    </div>
+                </div>
+                <div class="skill">
+                    <h3>Python  <span>80%</span></h3>
+                    <div class="progress">
+                        <span class="prog" style="width:80%" data-width="80%"></span>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
+    <!-- End Skills -->
+    <!-- Start Works -->
+    <div class="works" id="work-steps">
+        <h2 class="main-title">how it works</h2>
+        <div class="container">
+            <img src="images/work-steps.png" alt="img">
+           <div class="info">
+               <div class="box">
+                    <img src="images/work-steps-1.png" alt="img">
+                    <div class="text">
+                        <h3>Business Analysis
+                        </h3>
+                        <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Enim nesciunt obcaecati quisquam quis laborum recusandae debitis vel</p>
+                    </div>
+                </div>
+                <div class="box">
+                    <img src="images/work-steps-2.png" alt="img">
+                    <div class="text">
+                        <h3>Architecture
+                        </h3>
+                        <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Enim nesciunt obcaecati quisquam quis laborum recusandae debitis vel</p>
+                    </div>
+                </div>
+                <div class="box">
+                    <img src="images/work-steps-3.png" alt="img">
+                    <div class="text">
+                        <h3>Developement
+                        </h3>
+                        <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Enim nesciunt obcaecati quisquam quis laborum recusandae debitis vel</p>
+                    </div>
+                </div>
+           </div>
+        </div>
+    </div>
+    <!-- End Works -->
   </body>
 </html>
