--- a/index.html
+++ b/index.html
@@ -770,5 +770,83 @@
         </div>
     </div>
     <!-- End Pricing -->
+    <!-- Start Video -->
+    <div class="video">
+        <h2 class="main-title">top videos</h2>
+        <div class="container">
+            <div class="holder">
+                <div class="list">
+                    <div class="name">
+                        Top videos
+                        <i class="fas fa-random"></i>
+                    </div>
+                    <ul>
+                        <li>How To Create Sub Domain <span>05:18</span></li>
+                        <li>Playing With The DNS<span>03:18</span></li>
+                        <li>Everything About The Virtual Hosts<span>05:25</span></li>
+                        <li>How To Monitor Your Website<span>04:16</span></li>
+                        <li>Uncharted Beating The Last Boss<span>07:48</span></li>
+                        <li>Ys Oath In Felghana Overview<span>03:12</span></li>
+                        <li>Ys Series All Games Ending<span>08:10</span></li>
+                    </ul>
+                </div>
+                <div class="preview">
+                    <img src="/images/video-preview.jpg" alt="img">
+                    <div class="info">Everything About The Virtual Hosts</div>
+                </div>
+            </div>
+        </div>
+    </div>
+    <!-- End Video -->
+    <!-- Start Stats -->
+    <div class="stats">
+        <h2>Our Awesome Stats</h2>
+        <div class="container">
+            <div class="box">
+                <i class="far fa-user fa-2x fa-fw"></i>
+                <span class="num">150</span>
+                <span class="text">Clients</span>
+            </div>
+            <div class="box">
+                <i class="fas fa-code fa-2x fa-fw"></i>
+                <span class="num">135</span>
+                <span class="text">Projects</span>
+            </div>
+            <div class="box">
+                <i class="fas fa-globe-asia fa-2x fa-fw"></i>
+                <span class="num">50</span>
+                <span class="text">Countries</span>
+            </div>
+            <div class="box">
+                <i class="far fa-money-bill-alt fa-2x fa-fw"></i>
+                <span class="num">10k</span>
+                <span class="text">Money</span>
+            </div>
+        </div>
+    </div>
+    <!-- End Stats -->
+    <!-- Start Discount -->
+    <div class="discount">
+        <div class="image">
+            <div class="content">
+                <h2>We Have A Discount</h2>
+                <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Excepturi asperiores consectetur, recusandae ratione provident necessitatibus, cumque delectus commodi fuga praesentium beatae. Totam vel similique laborum dicta aperiam odit doloribus corporis.</p>
+                <img src="/images/discount.png" alt="img">
+            </div> 
+        </div>
+        <div class="form">
+            <div class="content">
+                <h2>Request A Discount</h2>
+                <form action="">
+                    <input class="input" type="text" name="Name" placeholder="Your Name">
+                    <input class="input" type="email" name="Email" placeholder="Your Email">
+                    <input class="input" type="number" name="mobile" placeholder="Your Phone">
+                    <textarea class="input" name="message"  placeholder="Tell Us About Needs"></textarea>
+                    <input type="submit" value="Send">
+                </form>
+            </div>
+        </div>
+    </div>
+    <!-- End Discount -->
   </body>
 </html>
