--- a/index.html
+++ b/index.html
@@ -848,5 +848,58 @@
         </div>
     </div>
     <!-- End Discount -->
+    <!-- Start Footer -->
+    <div class="footer">
+        <div class="container">
+            <div class="box">
+                <h3>Moneim</h3>
+                <ul class="social">
+                    <li><a class="facebook" href="#"><i class='fab fa-facebook-f'></i></a></li>
+                    <li><a class="twitter" href="#"><i class='fab fa-twitter'></i></a></li>
+                    <li><a class="youtube" href="#"><i class='fab fa-youtube'></i></a></li>
+                </ul>
+                <p>
+                    Lorem ipsum, dolor sit amet consectetur adipisicing elit. Temporibus nulla rem, dignissimos iste aspernatur
+                </p>
+            </div>
+            <div class="box">
+                <ul class="links">
+                    <li><a href="#">Important Link</a></li>
+                    <li><a href="#">Important Link</a></li>
+                    <li><a href="#">Important Link</a></li>
+                    <li><a href="#">Important Link</a></li>
+                    <li><a href="#">Important Link</a></li>
+                
+                </ul>
+            </div>
+            <div class="box">
+                <div class="line">
+                    <i class="fas fa-map-marker-alt fa-fw"></i>
+                    <div class="info">Egypt, Behira, Belal ST, Room number 19</div>
+                </div>
+                <div class="line">
+                    <i class="fas fa-clock fa-fw"></i>
+                    <div class="info">Business Hours: From 10:00 To 18:00</div>
+                </div>
+                <div class="line">
+                    <i class="fas fa-phone-volume fa-fw"></i>
+                    <div class="info">
+                        <span>+20123456789</span>
+                        <span>+20198765432</span>
+                    </div>
+                </div>
+            </div>
+            <div class="box footer-gallery">
+                <img src="/images/gallery-01.png" alt="img">
+                <img src="/images/gallery-02.png" alt="img">
+                <img src="/images/gallery-03.jpg" alt="img">
+                <img src="/images/gallery-04.png" alt="img">
+                <img src="/images/gallery-05.jpg" alt="img">
+                <img src="/images/gallery-06.png" alt="img">
+            </div>
+        </div>
+        <p class="copyright">Made With &hearts; By Moneim</p>
+    </div>
+    <!-- End Footer -->
   </body>
 </html>
