--- a/index.html
+++ b/index.html
@@ -791,7 +791,7 @@
                     </ul>
                 </div>
                 <div class="preview">
-                    <img src="/images/video-preview.jpg" alt="img">
+                    <img src="images/video-preview.jpg" alt="img">
                     <div class="info">Everything About The Virtual Hosts</div>
                 </div>
             </div>
@@ -831,7 +831,7 @@
             <div class="content">
                 <h2>We Have A Discount</h2>
                 <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Excepturi asperiores consectetur, recusandae ratione provident necessitatibus, cumque delectus commodi fuga praesentium beatae. Totam vel similique laborum dicta aperiam odit doloribus corporis.</p>
-                <img src="/images/discount.png" alt="img">
+                <img src="images/discount.png" alt="img">
             </div> 
         </div>
         <div class="form">
@@ -890,12 +890,12 @@
                 </div>
             </div>
             <div class="box footer-gallery">
-                <img src="/images/gallery-01.png" alt="img">
-                <img src="/images/gallery-02.png" alt="img">
-                <img src="/images/gallery-03.jpg" alt="img">
-                <img src="/images/gallery-04.png" alt="img">
-                <img src="/images/gallery-05.jpg" alt="img">
-                <img src="/images/gallery-06.png" alt="img">
+                <img src="images/gallery-01.png" alt="img">
+                <img src="images/gallery-02.png" alt="img">
+                <img src="images/gallery-03.jpg" alt="img">
+                <img src="images/gallery-04.png" alt="img">
+                <img src="images/gallery-05.jpg" alt="img">
+                <img src="images/gallery-06.png" alt="img">
             </div>
         </div>
         <p class="copyright">Made With &hearts; By Moneim</p>
